force-app/main/default/objects/Request_Document__c/Request_Document__c.object-meta.xml
<CustomObject>
    <label>Request Document</label>
    <nameField>
        <label>Request Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>