force-app/main/default/objects/Request_Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document Id</label>
    <description>ContentDocument Id of the uploaded file</description>
    <type>Text</type>
    <length>18</length>
</CustomField>