force-app/main/default/objects/Request_Document__c/fields/Service_Document__c.field-meta.xml
<CustomField>
    <fullName>Service_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Document</label>
    <referenceTo>Service_Document__c</referenceTo>
    <relationshipLabel>Request Documents</relationshipLabel>
    <relationshipName>Request_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>