force-app/main/default/objects/Request_Document__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>Service_Request__c</referenceTo>
    <relationshipLabel>Request Documents</relationshipLabel>
    <relationshipName>Request_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>